--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-grid-system": "^6.0.7",
     "react-icons": "^3.8.0",
     "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.1.3",
